fixed alignment to center

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,9 +3,6 @@ body,
 #root {
   display: flex;
   flex: 1;
-}
-
-body {
   justify-content: center;
   align-items: center;
 }
